// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Renders the UI snapshot correctly 1`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 2`] = `
<div
  className="css-0"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-0"
      src="test.png"
    />
    <figcaption
      className="css-0"
    >
      <div
        className="css-0"
      >
        Caption
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 3`] = `
<div
  className="css-0"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-0"
      src="test.png"
    />
    <figcaption
      className="css-0"
    >
      <div
        className="css-0"
      >
        Credit
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 4`] = `
<div
  className="css-0"
>
  <figure
    className="css-0"
  >
    <img
      alt=""
      className="css-0"
      src="test.png"
    />
    <figcaption
      className="css-0"
    >
      <div
        className="css-0"
      >
        Caption
      </div>
      <div
        className="css-0"
      >
        Credit
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`Image Renders the UI snapshot correctly 5`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 6`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 7`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 8`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 9`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 10`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-13vy6yk"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 11`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-acitaf"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 12`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 13`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1ohzkbg"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 14`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1b0ckep"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 15`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1u38a58"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 16`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1wleygq"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 17`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1rx5eur"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 18`] = `
<div
  className="css-0"
>
  <div
    className="the-wrap css-1b0ckep"
  >
    <div
      className="the-crop css-0"
    >
      <img
        alt=""
        className="css-0"
        src="test.png"
      />
    </div>
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 19`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-qvgr6z"
    src="test.png"
  />
</div>
`;

exports[`Image Renders the UI snapshot correctly 20`] = `
<div
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    data-testid="image"
    src="test.png"
  />
</div>
`;
